@@ -50,7 +50,7 @@ requires:
   English: 0
   Error::Pure: 0.15
   Exporter: 0
-  List::MoreUtils: 0
+  List::Util: 1.33
   Readonly: 0
   URI: 0
   Wikibase::Datatype::Form: 0
